// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpinnerCircularFixed matches the snapshot 1`] = `
<div>
  <svg
    fill="none"
    style="color: rgb(255, 255, 255); overflow: visible; width: 100px;"
    viewBox="0 0 66 66"
  >
    <circle
      cx="33"
      cy="33"
      fill="none"
      r="28"
      stroke="rgba(0,0,0,0.44)"
      stroke-width="2"
    />
    <circle
      cx="33"
      cy="33"
      fill="none"
      r="28"
      stroke="currentColor"
      stroke-dasharray="40, 134"
      stroke-dashoffset="325"
      stroke-linecap="round"
      stroke-width="2"
      style="animation: spinners-react-circular-fixed 14s linear infinite;"
    />
  </svg>
</div>
`;

exports[`SpinnerCircularFixed matches the snapshot with default props 1`] = `
<div>
  <svg
    fill="none"
    style="color: rgb(56, 173, 72); overflow: visible; width: 50px;"
    viewBox="0 0 66 66"
  >
    <circle
      cx="33"
      cy="33"
      fill="none"
      r="28"
      stroke="rgba(0,0,0,0.44)"
      stroke-width="4"
    />
    <circle
      cx="33"
      cy="33"
      fill="none"
      r="28"
      stroke="currentColor"
      stroke-dasharray="40, 134"
      stroke-dashoffset="325"
      stroke-linecap="round"
      stroke-width="4"
      style="animation: spinners-react-circular-fixed 1.4s linear infinite;"
    />
  </svg>
</div>
`;
